# Q-learning

./: .gitignore  README.md  ai.py  camera.py  car.py  carManager.py  index.py  main.py  playerController.py  pyproject.toml  q_table.pkl  requirements.txt  road.py  roadManager.py  util.py
q-table/: q_table.xlsx
src/q_learning/: __init__.py  ai.py  car.py  main.py  playerController.py  road.py  roadManager.py  util.py
src/q_learning/q-table/: q_table.pkl  q_table_best.pkl
