[project]
name = "q-learning"
version = "0.1.0"
description = "Q learning model"
readme = "README.md"
authors = [
    { name = "Mjolksaft", email = "Kalla01@hotmail.se" }
]
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn==0.14.0",
    "imblearn==0.0",
    "joblib==1.5.2",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tzdata==2025.2",
    "pygame>=2.6.1"
]

[project.scripts]
q-learning = "q_learning.main:main"

[tool.ruff]
src = ["src/q_learning"]
line-length = 88
exclude = ["venv", "*.pkl", "__pycache__", "q-table/"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
